--- a/index.html
+++ b/index.html
@@ -146,12 +146,11 @@
                     <p className="text-sm sm:text-base text-white/90">{subtitle}</p>
                   </div>
                 </div>
-                <!-- 
                 <div className="flex items-center gap-2">
                   <button onClick={onToggleAdmin} className={`px-3 py-1.5 rounded-xl text-sm font-semibold border border-white/30 ${admin? 'bg-white text-red-700':'bg-black/20'}`}>{admin? 'Admin: ON':'Admin: OFF'}</button>
                   <button onClick={onOpenSettings} className="px-3 py-1.5 rounded-xl text-sm font-semibold border border-white/30 hover:bg-white/10">Settings</button>
                   <button onClick={onReset} className="px-3 py-1.5 rounded-xl text-sm font-semibold border border-white/30 hover:bg-white/10">Reset</button>
-                </div> App code hidden -->
+                </div> 
               </div>
             </div>
           </header>
