--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ Divisions:
           {
             id: 'p1',
             url: 'https://images.unsplash.com/photo-1547347298-4074fc3086f0?q=80&w=1600&auto=format&fit=crop',
-            caption: 'Team Canada Masters – tournament day',
+            caption: 'Team Canada Masters – World Cup 2024 NZ Inauguration Day',
             credit: 'Photo: FHC',
           },
         ],
