commit changes on url

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@ Divisions:
             date: new Date().toISOString().slice(0,10),
             title: 'Welcome to the FHC Masters portal',
             body: 'Follow this page for selection camp dates, tournament details, and team updates. Use the buttons below to register your interest for PACC and the 2026 World Cup.',
-            ctaText: 'Masters Program',
-            ctaUrl: 'https://fieldhockey.ca/program/canadian-masters-hockey/',
+            ctaText: 'Masters Program Registration',
+            ctaUrl: 'http://fhcmast.rampregistrations.com/',
             tag: 'Update',
           },
         ],
